# cc4102-tarea2

./: CMakeLists.txt
include/: disjoint_set.hpp  graph.hpp  krushkhal.hpp  kruskal.hpp  kruskhal.hpp  point.hpp
src/: graph.cpp  krushkal_arr.cpp  krushkal_heap.cpp  krushkal_opt_arr.cpp  krushkal_opt_heap.cpp  kruskal_arr.cpp  kruskal_heap.cpp  kruskal_opt_arr.cpp  kruskal_opt_heap.cpp  main.cpp
